--- a/index.html
+++ b/index.html
@@ -24,93 +24,38 @@
             <h1>Toji0day's Ethical Hacking
             </h1>
             <pre id="ascii-art">
-
-⣿⣿⣿⣿⣿⣿⣿⣿⣿⡇⠂⠀⠀⠀⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣷⣶⣦⣤⣀⣀⠀⠀⠀⠈⠉⠙⠛⠻⠿⣿⣿⣿⡧⡇⠀⢸⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⡇⠀⠀⠀⢀⡐⠠⠄⠂⠄⡠⠀⠄⠠⠀⠄⠠⠀⠄⠠⢀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
-⣿⣿⣿⣿⣿⣿⣿⣿⣿⡇⠀⠀⠀⠀⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣶⣦⣴⣀⣀⠀⠀⠀⠀⠉⠁⠃⠀⠸⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⡇⠀⠀⠀⠠⢀⠃⡌⠌⡐⠠⢁⠌⠄⠡⠈⠄⠡⢈⠐⡀⠂⠀⠂⠁⡀⠌⠀⠠⠁⠀⠂⠀
-⣿⣿⣿⣿⣿⣿⣿⣿⣿⡇⠀⠀⠀⠀⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣷⣶⣦⣤⡀⠀⠀⠀⠀⠈⠉⠛⠛⠿⢿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⡇⠀⠀⠀⢀⠣⢌⡐⠌⡠⠃⠤⠈⡄⢃⠡⠈⠔⡀⠂⠄⠡⠐⠀⠄⠀⠠⠐⠀⡀⠁⡀⠂
-⣿⣿⣿⣿⣿⣿⣿⣿⣿⡇⡇⠀⠀⠀⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⢰⡃⠀⢸⣶⣦⣴⣀⣀⠀⠀⠀⠈⠉⠛⠛⠿⢿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⡗⠀⠀⠀⢀⠎⡰⢀⠣⡐⠡⠌⢡⠐⠄⡂⢉⡐⠠⠁⡌⠐⠀⡐⠀⠌⠀⠄⠂⢀⠐⠀⡀
-⣿⣿⣿⣿⣿⣿⣿⣿⣿⡇⡇⠀⠀⠀⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣼⡂⠀⢸⣿⣿⣿⣿⣿⣿⣿⣶⣦⣤⣄⣀⠀⠀⠀⠈⠉⠛⠛⠿⠿⣿⣿⣿⣿⣿⣿⣿⣿⡇⠀⠀⠀⢠⠊⡔⢡⠂⡅⢣⠘⡄⡘⡐⠨⠄⠤⠑⠂⢄⠁⠂⡀⠐⡀⠌⠀⡐⠀⠀⠂⠀
-⣿⣿⣿⣿⣿⣿⣿⣿⣿⠓⡇⠀⠀⠀⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⡇⠀⢸⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣶⣶⣤⣄⣀⡀⠀⠀⠈⠉⠙⠛⠿⠿⣿⡇⠀⠀⠀⢠⠓⣌⠢⡑⢌⠢⡁⢆⠡⢂⠱⢈⠄⢃⠌⠄⢊⠀⡐⠀⠄⠐⡀⠀⠀⠀⠀⠀
-⣿⣿⣿⣿⣿⣿⣿⣿⣿⢨⡇⠀⠀⠀⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⡇⠀⢸⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣶⣶⣤⣤⣀⡀⠀⠀⠁⠀⠀⠀⢠⠓⡤⠓⣌⠢⡑⢌⠢⡑⢌⠢⡁⠎⡐⠌⡨⠄⠂⠠⢈⠀⢂⠐⠀⠀⠀⠡⠀
-⢿⣿⣿⣿⣿⣿⣿⣿⣿⢸⠃⠀⠀⠀⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⡿⠿⣿⣿⣿⣿⣿⣿⣿⡅⠈⢸⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣷⡆⠀⠀⠀⢠⢋⠴⡩⢄⡓⢌⢢⠑⡌⢢⠑⡌⢢⠁⠎⡐⠠⢁⠂⠄⡈⠄⠐⡀⠀⠈⡀⠄
-⠀⠀⠀⠉⠉⠛⠛⠻⠿⢸⠀⠀⠈⢀⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⡿⣟⡏⢙⠯⣃⣥⣦⣅⢚⠩⣋⣭⡙⢿⠆⠁⢸⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⡇⠀⠀⠀⠰⣉⠖⡱⢊⡜⢢⢡⠚⡄⢣⠘⡄⢣⠘⠤⣁⠃⠄⢂⠐⠠⠈⠄⡀⠀⠀⠄⠀
-⣧⣤⣄⣀⣤⠄⢀⡀⠀⠀⠀⠀⠠⠘⠛⠿⠿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⡿⣛⣽⠾⢟⢎⣾⠦⣗⠮⠁⡶⣡⢶⣿⣿⢻⣄⢲⠠⡸⢿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⡗⠀⠀⠀⢘⡜⡜⣡⠳⣌⠣⢆⡓⡌⢆⡱⢈⠆⣉⠒⡄⢊⠐⠠⠈⠄⡁⢂⠀⠀⠀⠂⠀
-⣿⣿⣿⣿⣿⣿⣿⣶⣶⢡⠀⠀⡀⠀⠄⡀⠀⠀⢀⠈⠉⠙⠛⠛⠿⠿⣿⣿⣿⣿⡵⣻⡵⠞⣵⢨⣾⠏⠀⠈⠙⠂⣧⣟⢘⣿⣻⣸⣾⣧⠨⡅⠄⠝⢿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⡇⠀⠀⠀⢨⠲⣍⢲⡱⢌⠳⣌⠲⣉⠆⣆⠣⡘⢄⠣⡘⠤⠈⠄⡁⢂⠐⡀⠂⠀⠈⠄⠀
-⣿⣿⣿⣿⣿⣿⣿⣿⣿⢼⠀⠀⠀⢸⣷⣶⣾⣤⣴⣌⣠⣁⠈⠄⠡⠂⡔⡠⣵⣻⡾⠃⣸⢾⠃⣸⡏⠀⠀⣀⢀⠄⣿⡏⠀⢿⡏⡇⣿⡟⠀⡇⢶⣶⢶⣆⢿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⡇⠀⠀⠀⢨⠳⣌⢧⢚⡬⢓⡌⠳⣌⠚⡤⢃⡱⢊⠔⡡⢊⠄⢡⠐⢂⠐⠠⢁⠀⠈⠄⠀
-⣿⣿⣿⣿⣿⣿⣿⣿⡿⢸⠀⠀⠂⢼⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣶⣾⣤⢰⣧⣟⡝⡄⣿⡿⠀⣿⢀⡾⣫⣭⣍⠀⡿⡅⠂⣿⢸⣿⣿⢁⠀⡇⠁⠀⢸⡇⠸⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⡇⠀⠀⠀⢨⣓⢎⡎⢧⢎⠳⣘⠧⣌⠳⣌⢣⠒⡥⠚⡄⢣⠈⠤⠈⢄⠊⡐⠠⠀⠐⡈⠄
-⣿⣿⣿⣿⣿⣿⣿⣿⡇⢸⠀⠠⠀⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣏⢿⢅⣞⢰⡇⣿⠁⠀⡏⡟⣼⣿⣿⣿⡄⡇⡇⢸⡟⣼⣿⣿⠸⣄⢳⣀⠀⢸⡟⢰⡈⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⡇⠀⠀⠀⢰⢭⣚⡜⣣⢎⡳⢥⡚⣤⠓⣌⠦⡙⡔⢣⠜⢢⠁⠆⡉⠄⠒⠠⡁⠀⢀⠐⡀
-⣿⣿⣿⣿⣿⣿⣿⣿⡇⢺⠀⢀⠁⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⡿⣫⣶⢟⠘⣾⡜⣷⢿⠀⡇⡇⢸⠿⠟⣛⣉⡁⠁⠇⢸⢡⠛⣼⠏⣼⢸⢸⣿⡄⢸⠁⣿⠃⠉⠛⠛⠿⠿⠿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⡇⠀⠀⠀⢸⣚⢦⣝⡲⣍⠞⣆⢳⢢⢛⣤⠳⡱⢌⢣⠚⡤⢉⠰⠈⡔⢉⡐⠄⠀⠀⠂⠄
-⣿⣿⣿⣿⣿⣿⣿⣿⡇⢸⠀⠂⠄⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⢫⡾⣫⡗⢿⡇⢹⣷⢻⡸⡄⡇⡅⢶⣿⠿⢿⠷⠇⠀⡼⢠⢏⡾⢣⣀⠀⠄⣾⣽⡇⡈⡇⡟⠰⣡⢀⣂⠀⠀⠀⠀⠀⠉⠉⠉⠛⠛⠿⠿⣿⣿⣿⣿⣿⣿⣿⣿⣷⠀⠀⠀⢸⡭⢞⡲⣵⢪⡝⣬⢣⢏⡺⢌⣇⢓⠎⡥⢋⠴⢁⢊⠡⡐⢂⠰⢈⠀⠀⡉⠄
-⣿⣿⣿⣿⣿⣿⣿⣿⡇⢼⠀⡁⠂⣿⣿⣿⣿⣿⣿⣿⣿⡿⣫⠎⢾⣯⣿⣮⢻⡜⣽⡏⢇⡧⢻⠃⠃⠉⢀⠈⠙⡂⣄⡏⢮⡞⢡⢣⠟⢠⣦⣤⡛⡇⡇⣇⢾⠰⡁⣾⣿⣿⣿⣷⣶⣶⣤⣤⣄⣀⣀⠀⠀⠀⠀⠀⠉⠉⠙⠛⠛⠏⠀⠀⠀⢸⡞⣭⢳⢧⣳⠺⡥⢏⠶⣩⠖⣜⣊⠞⡰⢍⡚⠠⠌⢒⡀⢃⠌⡄⠀⠐⠠⠌
-⣿⣿⣿⣿⣿⣿⣿⣿⡇⡆⠀⠄⡁⣿⣿⣿⣿⣿⣿⣿⣫⠞⣵⣟⢷⣝⡻⣿⣷⡀⡇⡟⠀⠸⡄⡴⣾⠫⡀⡥⣱⢤⣿⣷⣬⣦⠀⠋⠐⠛⢝⢿⣷⠀⣇⢤⡎⡼⢰⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣶⣶⣶⣤⣤⣄⣀⡀⠀⠀⠀⠀⢸⣝⢮⣛⡖⣧⡻⣝⣫⠞⣑⠵⢬⢬⣌⣲⢲⣞⣗⡢⠤⣌⣂⠂⠔⠀⡀⢀⠀
-⣿⣿⣿⣿⣿⣿⣿⣿⢿⡇⠈⠐⠄⣿⣿⣿⣿⣿⡿⠑⢱⣿⡜⣿⡎⣿⣷⡝⠿⡇⠑⢳⠸⠀⢳⢻⣮⣴⣶⣤⣵⣿⣿⣷⡿⢰⡗⠂⠀⠂⠀⠀⠙⠁⠛⡼⠰⢠⠐⠝⢿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⡇⢠⠀⠀⢸⡽⣧⡿⡝⠳⢫⠵⢲⡝⢱⣿⣧⢾⣿⣿⢸⣿⢻⢱⣿⢻⠎⣼⢲⡄⠐⠡⠈
-⣿⣿⣿⣿⣿⣿⣿⣿⢸⡇⠀⠀⠄⣿⣿⣿⣿⣿⣇⠰⡈⢿⣿⣌⢿⣌⠻⣿⣦⠁⠀⠈⠂⠀⠂⢸⣿⣿⣿⣿⣿⣿⣿⣇⡗⠀⣷⣀⡀⠈⠼⣤⡠⠀⢠⠃⠆⡄⠐⡀⠂⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⡇⢸⠀⠀⢸⣷⣏⠃⠉⠔⣉⣶⡙⣿⣇⢻⣿⢸⣿⡏⣼⣿⡇⣸⣿⠉⢰⢇⠚⠄⡐⠢⡀
-⣿⣿⣿⣿⣿⣿⣿⣿⢸⡇⠀⠁⠀⣿⣿⣿⣿⣿⣿⣀⠐⢄⠈⠛⠦⡙⠧⡈⠻⣦⠀⢤⡄⢆⣁⢻⣿⣿⣿⣿⣿⣿⣿⣿⣏⣤⣿⣿⣷⣷⣶⡟⠀⠀⠃⠀⠀⠃⠡⠄⢰⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⡇⢸⠀⠀⢸⣿⠟⡰⣶⣾⡟⣿⣧⠸⣿⡜⣿⡇⣿⡇⣿⣿⠃⣿⡟⢀⡟⡆⠃⢴⢡⢃⢠
-⣿⣿⣿⣿⣿⣿⣿⣿⢸⡇⠠⠠⢄⣿⣿⣿⣿⣿⣿⣿⣧⠀⠰⣀⢆⡈⢄⠈⡤⢀⠄⡀⠀⠸⣿⡆⣿⣿⣿⣿⣿⣿⣿⠿⣿⣿⣿⣿⣿⣿⣿⠁⠀⡌⢠⢀⢇⠦⢀⠀⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⡇⢸⠀⠄⡈⡡⢠⣷⣌⢿⣿⣌⢿⣧⢹⣧⢹⣇⣿⡷⣿⡿⣸⣿⢀⣾⡉⢀⣎⡼⣡⢎⢦
-⠀⠄⡈⠍⡉⢉⡙⠛⠚⠃⢌⡑⠸⣿⣿⣿⣿⣿⣿⢟⣵⡖⡀⠈⠈⡝⢦⠑⠌⢣⢂⠐⠀⠀⠹⣷⡸⣿⣿⣿⣿⣏⠀⠁⢘⣿⣿⣿⣿⣭⠏⠔⠀⠈⡡⢊⠌⢄⠁⢈⠓⠯⡛⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⡏⢸⠀⠜⡰⣳⣶⣝⢿⣷⣝⢿⣯⡻⣧⢻⡞⣿⢸⡇⣿⢇⡿⢣⣞⠇⣴⣏⢎⡾⣵⢫⣎
-⣶⣖⣈⣀⣬⠄⠐⢉⡐⢉⠆⡜⡄⢃⢖⡰⢪⡍⣩⢟⣭⡢⣿⣿⡶⣌⠠⠋⡔⠃⠀⣀⣄⠀⠀⡈⠃⢻⣿⣿⣿⣿⣦⣤⣾⣿⣿⣿⠿⠋⠀⢠⠀⠤⡁⠄⠂⡠⠂⠤⠘⢀⣀⣛⣛⡻⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⡇⢸⠀⣠⢹⣻⢿⣿⣷⣯⡻⣷⣝⢿⣞⢧⢻⠘⡋⡅⣽⠙⡣⢿⢊⣾⢓⣴⢫⠞⣥⡻⣼
-⣿⣿⣿⣿⣿⣿⣿⡇⣴⢈⠸⢔⢢⣤⣴⣎⣁⠀⢣⠹⡟⣷⡝⣟⢿⣦⣕⣄⠀⣠⣾⣿⣿⣧⡀⢡⢂⡈⠻⣿⣿⣿⣿⣿⣿⡿⠏⠅⠀⠀⠀⠡⠒⠁⠐⣁⣠⣥⣶⣶⣿⣿⡿⡻⢛⣿⣬⣝⢿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⡇⠸⢀⠯⣿⣿⣿⣶⣭⣛⠿⣾⣝⢷⠍⢤⠁⢣⠇⡇⡇⢃⡅⠄⡝⢷⠞⣩⠶⡝⣞⡵⣳
-⣿⣿⣿⣿⣿⣿⣿⡇⣿⣿⣿⣿⢸⣿⣿⣿⣿⣦⠘⢷⡙⡜⢯⡺⣷⣝⡟⣡⡾⣿⣿⣿⣿⡟⡃⠄⢛⠶⣄⠈⠛⢿⡿⠛⠉⠀⠀⠀⠀⠀⢀⢢⣄⢲⣿⣿⡿⣿⣿⣿⣿⣿⢷⠃⢯⡿⣿⣿⣦⡩⡻⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⡇⢰⢹⣮⣶⣶⣶⣿⣽⣿⣿⣷⢯⡋⡀⠣⠀⠈⠀⠀⠱⠈⠈⢚⠄⠀⠹⣭⢳⣏⡷⡹⢳
-⣿⣿⣿⣿⣿⣿⣿⡇⣿⣿⣿⢲⢸⣿⣿⣿⣿⣿⣄⠁⠤⢊⢆⢅⠊⠛⣼⢏⡾⣻⢟⡵⢋⠜⠁⢄⠈⣟⡜⡷⣄⠀⠄⡐⢈⠆⠀⠀⠀⠠⠾⠓⠉⠀⠉⠉⠈⠙⠛⠛⠋⠉⠀⠀⠳⢝⠷⣯⡻⣿⣮⣪⣟⠛⣻⠿⠿⢿⡿⠿⣿⣇⠸⢸⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⢐⠭⠑⡀⠀⠀⠀⠀⠀⠀⠀⠠⠀⡂⣭⡗⣮⣜⡳⣭
-⣿⣿⣿⣿⣿⣿⣿⣷⣿⢹⣮⣟⢸⣿⣿⣿⣿⣿⢟⣥⣄⠉⠊⠦⠈⢰⣷⠟⡱⣡⠎⠔⢁⠬⡘⢂⡞⡼⣚⡸⣽⣳⢤⡔⣬⠃⣀⠀⠀⠀⠹⡅⠐⣂⠀⠄⠂⠀⠄⠠⠀⠁⢂⠐⢬⡂⠱⣮⡙⢿⣿⣿⣷⣕⢮⣙⢎⣳⢱⠢⢆⡄⡀⢹⣿⣿⣿⣿⣿⣿⣿⣿⣿⡷⠬⢭⣉⣀⠀⠀⠈⠀⠀⠀⠒⠒⠒⠂⣖⣛⡶⢎⢷⡲
-⣿⣿⣿⣿⡿⠿⠿⠏⠿⠸⠷⠿⠸⢿⣿⣿⣿⡳⣛⢿⣿⢏⡄⣀⠐⠄⠂⢄⠔⡡⠄⠎⠘⡀⢀⣌⣌⣓⣙⣂⠱⣟⠎⣴⢯⠧⢈⣙⣊⣐⣤⣤⣤⢶⡶⣶⣿⣿⣿⣿⣷⣶⣤⣄⠸⣿⣦⡌⢿⣾⣿⣿⣿⣿⣷⣝⢷⣦⣊⢻⠯⠤⠄⢸⣿⢿⣟⣻⣿⣯⣽⣷⣶⡿⢇⢛⡭⢂⢄⡄⠞⠀⠀⠀⣀⠙⡊⢑⠯⣵⣋⡻⢮⢵
-⣶⣤⠰⣿⣿⣿⣿⣿⣿⣿⡿⢿⣿⡿⠀⠀⢠⣱⣿⣿⢆⣞⡜⠿⣆⠐⡈⠎⢈⣴⢖⡟⣽⣇⠐⣼⠛⣭⣟⡻⣿⣌⡻⡿⣣⣾⣿⣿⣿⣿⣯⣷⣯⣿⡷⣮⣽⡻⢿⣿⣛⢿⣿⣿⣿⣬⡝⠿⠦⠙⢿⣿⣿⣿⣿⣿⣿⣮⡻⢷⣮⡻⢿⣎⢿⣿⣿⣿⡿⢟⣻⣽⣶⡾⢟⣄⡘⢡⡞⡜⠀⡆⠐⡄⠠⠑⣐⠫⣿⡲⣭⠳⣝⠶
-⠈⠙⠇⠘⠛⣉⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⢦⣿⣿⡏⠘⢋⠡⠂⢊⠃⣔⣴⢏⡵⣫⣾⡿⡱⠀⢢⣾⣟⡿⣿⣶⣝⠿⣼⣿⣿⣾⣿⣷⣿⣻⣯⣿⣟⣿⡿⣟⣿⣷⣮⣛⠎⠿⣫⣵⣾⣿⣿⣿⣿⣬⡙⢿⣿⣯⣿⣿⣿⣿⣷⣮⣽⣓⠽⡊⠿⠭⢶⣿⣿⡿⣻⣽⣾⡿⣫⣷⢎⡜⡌⠀⣳⢠⢠⡰⡝⢮⡳⣌⡳⣝⢻⡼⣙
-⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠐⣞⣿⣿⣷⣄⠂⠢⣈⢄⢞⢛⢕⣵⣾⠟⠋⠈⢠⣴⣿⣿⣿⣿⣾⣽⡻⣿⣮⣝⢿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣷⣶⣶⣶⣶⣮⣽⣛⣻⠿⠿⣿⣿⣿⣷⡜⢿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣦⣎⡙⠛⠿⠶⣶⣶⣟⡯⣬⣭⣥⣿⣐⣃⣂⣻⠜⠎⠷⠹⣎⢻⣌⠻⣬⠲⡹⣝
-⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⢺⣼⣿⣿⣿⣿⡦⠁⠂⠀⣱⡕⡻⣋⢔⠀⣁⣼⣿⣿⣿⣿⣿⣿⣿⣿⣿⣷⣽⣿⣳⣯⣻⢿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣷⣾⣭⣽⣛⡦⠛⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣟⢷⣄⠀⠀⠀⠈⠉⠛⠲⢍⠉⠉⠉⠉⠉⠉⠉⠉⠉⠙⠢⠀⠈⠃⠉⠁⠙⠚
-⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⢀⠋⣿⣿⢿⣿⢏⠄⣂⠀⣸⢫⠎⠊⠁⣄⣶⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣏⢿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣷⣾⣝⡻⣿⣿⣿⣿⣝⢿⣿⣿⣷⣝⣆⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
-⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠂⠀⠈⡇⣿⣿⣯⠋⣊⢡⢻⣦⡁⠃⠀⣠⣾⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣯⡻⣿⣿⣯⢿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣷⣍⡻⣿⣿⣷⡹⣿⣿⣿⣿⣇⡀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
-⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠐⠀⠀⠀⠀⢖⢹⣿⣿⣄⠘⣆⠳⣙⠢⢐⣾⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣝⢿⣿⣎⢿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣌⠙⣿⣷⡹⣿⣿⣿⣿⣿⡀⠀⠀⠂⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
-⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⢀⠀⠀⠘⣇⢯⣿⣿⣆⠈⠳⡅⣱⢟⣯⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣷⣝⣿⣞⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣻⢿⣿⣿⣿⣎⢿⣷⡹⣿⣿⡿⣛⣿⠁⠀⢀⠀⠠⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⢀⣠⢔⣢
-⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⢫⢸⡿⣟⡿⡆⢀⣼⣵⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣎⣿⣸⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣓⡯⣟⣿⣿⡧⠹⡳⣭⢗⡿⢯⠃⠀⠀⠄⡠⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⣠⡶⣋⣵⣿⣿
-⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠠⠀⠀⠀⠀⠘⡌⡿⣽⠻⢡⣾⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⡜⡇⣿⣿⣿⣿⣷⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣷⣿⠃⣔⡇⡜⠧⠛⠈⠁⠀⠀⢌⡲⣄⠠⡁⠀⠀⠀⠀⠀⠀⢀⣠⣴⢿⣫⣶⣿⣿⢿⣯
-⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⢀⠐⠈⠀⠀⠰⣈⠏⣑⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⡷⢿⣿⣞⣿⣼⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⡆⢻⢃⠆⠀⠀⠀⠀⡀⢬⣾⣿⣿⣳⡟⠆⠀⠀⢀⣠⣶⡿⣻⣵⣿⣿⡿⢛⣽⣿⣿
-⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⢀⠂⠜⠠⠁⠀⠀⠱⠠⣿⣿⣿⢿⣿⣿⣿⣿⣿⡿⣵⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⢿⣿⣿⣿⢸⡜⣿⣎⢿⣿⣿⣿⣿⣿⢻⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⡿⣿⢟⡿⣹⢏⡦⣐⠀⠀⠀⡐⢠⡜⣯⣷⣿⡿⢃⠉⠀⣠⣶⡿⣻⣵⣿⣿⠿⣻⣵⣾⣿⣿⣿⣿
-⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠌⠠⠁⠀⡠⠂⢀⣿⣿⣿⠏⣼⣿⣿⣿⣿⣿⠵⣻⣵⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⡟⣿⣿⣿⢸⣿⡽⣿⣇⡙⠿⣿⣿⣿⡌⢿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣷⣝⢮⡻⣜⢧⡻⡼⠁⠀⢀⠒⡌⠶⡘⠐⠉⡘⠁⣂⣴⣿⢟⣽⣾⣿⡿⣻⣵⣿⣿⣿⣿⣿⣿⣿⣟
-⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠂⠀⠀⠐⠁⠠⢸⣿⣿⡿⢸⣿⣿⡿⣭⢖⣡⠞⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⡇⢻⣿⡟⣸⣿⣿⣹⣿⣿⣦⡈⠛⣿⣿⣈⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣯⣷⣹⢮⡕⡅⠀⠀⠈⠀⠈⠁⠀⠀⠀⣠⣾⡿⣫⣾⣿⡿⢟⣵⣿⣿⣿⣿⣿⣿⣿⣿⣿⡯⣿
-⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⢀⠁⢸⣿⣿⡇⣿⣿⣿⡐⢦⡸⠎⢰⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣷⣂⣿⠇⣿⣿⣽⣧⠩⣿⣿⣿⣧⡀⠹⣻⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣟⣿⣽⣾⣯⣷⣿⣻⢯⡟⠁⠀⠀⠀⡀⠀⢀⠀⣴⣾⢟⣵⣿⣿⡿⣫⣶⣿⣿⣿⣿⣿⣿⣿⡿⣫⣿⣿⠇⡟
-⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠐⠀⢸⡾⣿⣷⢹⣿⣿⢷⣀⠈⢀⣼⢻⡽⣿⢿⡿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⠿⠰⣿⣿⡿⣷⣆⢻⣿⣿⣿⣿⣦⣄⠙⠿⣽⣿⢿⣟⣾⡿⣽⣾⢿⣽⣶⣿⣻⢷⣻⡽⣞⡽⡛⠀⢠⢂⠁⠂⠄⠁⣴⠞⢡⣵⣿⣿⡿⣫⣾⣿⣿⣿⣿⣿⣿⣿⠿⣫⣾⣿⣿⡟⠈⣥
-⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠸⡝⢿⣻⣆⠳⢎⡷⣹⢞⡽⣎⢷⡹⣎⢷⣹⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⠟⠀⣾⣿⣷⣿⣿⣯⡌⣿⣿⣿⣿⣷⣿⣷⡀⠁⠹⣿⣻⢿⣽⣛⢾⡻⣞⣳⡭⣏⢯⡳⣝⠮⠚⠀⠀⠀⠀⠀⠠⣠⠞⣡⢃⣿⣿⡿⣫⣾⣿⣿⣿⣿⣿⣿⣿⢟⣵⣿⣿⣿⣿⡟⠉⣼⣿
-⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠸⣫⢷⢯⡷⣍⡲⣍⢮⣛⢮⡳⣝⢮⣳⣿⣾⣿⣿⣟⣿⣿⢻⣿⣿⣿⡿⠁⠀⢰⣿⣿⡿⣯⣿⡳⣇⣿⣿⣻⣯⣿⡷⣟⣧⢣⠀⣀⠉⠛⠦⣛⢎⡳⣝⠲⡝⢮⠣⠝⠀⠀⠀⠀⠀⠀⢀⡄⢠⠋⡔⡂⣾⣿⣫⣾⣿⣿⣿⣿⣿⣿⣿⢟⣵⣿⣿⣿⣿⣿⡟⢀⣾⣿⡿
-⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠱⢯⣛⡾⣽⣻⣞⣶⣽⡾⣷⣿⣿⣻⢿⣳⣿⣿⣿⣿⢃⣾⣿⡟⠏⠁⠀⣠⣿⢿⣟⣿⢿⡳⣝⢲⠘⡞⣽⢻⣯⠿⣝⣎⡣⠄⢯⡟⣄⢀⠀⠈⠁⠈⠁⠉⠀⠀⠀⠀⠀⠀⠀⣠⣾⣿⢁⠦⣙⠰⣸⢟⣵⣿⣿⣿⣿⣿⣿⣿⢟⣵⣿⣿⣿⣿⣿⣿⡟⢠⣾⣿⣿⣿
-⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠘⢳⣽⣳⢯⡿⣽⣾⢿⣿⣾⣯⣿⣿⣿⣿⣿⣾⣿⡿⠟⠊⠁⠤⡘⡔⡍⡞⡹⣞⣽⣧⣽⡬⠇⠎⢘⣂⣥⣶⣿⣿⣻⣷⣧⡤⢙⠼⣎⡵⣥⣔⣀⠄⠀⠀⠀⠀⠀⠀⣀⣼⣿⣿⠃⣌⠲⣁⠃⣳⣿⣿⣿⣿⣿⣿⣿⢟⣵⣿⣿⣿⣿⣿⣿⣿⠏⣸⣿⣿⡿⣿⣿
-⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⡀⠄⠀⠀⠀⢠⡁⢆⠁⠫⠿⡽⣯⣟⣿⣻⣯⣿⠿⣿⣻⣽⡻⠙⠃⠀⣀⣄⣈⠱⠱⣘⡜⣲⣿⣻⣿⣿⣿⠿⠿⢦⣈⢻⣫⣶⣶⣶⣾⣭⣛⠿⣧⢆⠻⣽⢯⡿⣽⣻⣆⠀⠀⠀⢀⣠⣿⣿⣿⡇⡰⢌⡱⢌⢸⣿⣿⣿⣿⣿⣿⡿⣣⣿⣿⣿⣿⣿⣿⣿⡿⡃⣰⣾⣿⣿⢳⣿⣿
-⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⢀⠀⠂⠀⡀⠀⠀⢀⡳⡜⣄⢣⡐⠡⠄⣉⠚⠓⠋⠷⠋⠛⠉⠁⠀⠀⡀⡔⣺⠵⣾⣭⡗⣧⢣⡿⣽⣿⠿⣛⣵⣶⣿⣿⣿⣾⣷⡽⣿⣿⣿⣿⣿⣿⣿⣮⣻⣷⣿⣶⣾⣝⠷⣿⡖⣄⢀⣰⣿⣿⣿⡟⢠⢑⠪⡔⡃⣾⣿⣿⣿⣿⡿⣫⣾⣿⣿⣿⣿⣿⣿⡿⣫⡞⢀⣿⣿⣿⣏⣿⣿⣿
-⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠠⠘⠤⠀⠀⠀⠀⢮⡱⡹⣌⢳⠲⣌⠒⡠⠣⢌⡑⠂⠀⠀⠀⣄⠲⣥⣳⠼⣥⢻⣧⢿⣽⣳⢯⣽⣗⣵⣾⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣷⣿⡷⣿⣿⣿⣿⣼⡇⢀⣲⣿⣿⢿⣿⠇⠢⣍⢲⢡⠃⣿⣿⣿⣿⣫⣾⣿⣿⣿⣿⣿⣿⣿⢟⣵⣿⠁⢸⣿⣿⡿⣼⣿⣿⣿
-⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠐⠀⢏⡐⠁⠀⠀⠈⡖⣱⢣⡝⣎⠳⡜⢠⢥⡓⡤⣈⠁⠀⢀⠼⣌⢷⣳⣯⣟⣾⣣⣟⢿⣞⣯⢿⣾⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⢀⣲⣿⣿⢫⣿⡿⢠⠓⡬⢎⡥⠃⣿⣿⢟⣵⣿⣿⣿⣿⣿⣿⣿⡿⣱⣿⣿⡏⠀⣼⣿⣿⢧⣿⣿⣿⣿
-⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠌⠀⠂⠄⠠⠀⠀⠀⣇⢣⠳⡜⣬⢳⠉⡞⢦⡙⢦⠁⠀⠀⣬⢓⢮⣿⣻⣿⣽⣾⡷⣯⠟⣪⣶⣷⣽⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⡇⢬⣿⣿⢻⣼⡟⣇⠠⡙⡴⢋⡴⠃⡟⣵⣿⣿⣿⣿⣿⣿⣿⡿⣫⣾⣿⣿⡿⠀⠀⣿⣿⣿⢸⣿⣿⣿⣿
-⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠈⠀⠈⠀⠀⠀⠀⠀⢩⡈⠷⣙⢦⣋⢞⡱⢣⡝⠢⠀⠀⢰⢎⡝⣺⢼⣟⣷⣿⣽⣿⣷⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⡿⣈⣿⣿⣏⡿⣿⣾⣧⠰⠱⣌⠣⡜⡁⣾⣿⣿⣿⣿⣿⣿⣿⢟⣽⣿⣿⣿⣿⠃⠀⠀⣿⣿⡏⣿⣿⣿⣿⡿
-⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠸⣅⡛⡜⠦⣙⣊⣡⣧⣬⣥⣤⣀⣃⣊⠜⠥⣛⠾⢿⣾⣿⣿⣷⢿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⢡⣿⣿⣿⠟⣾⣿⣿⣿⢀⠏⡔⠣⡜⢡⢹⣿⣿⣿⣿⣿⡟⣵⣿⣿⣿⣿⣿⠏⠀⠀⠂⣿⣿⢧⣿⣿⣿⣿⠃
-⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⢀⢀⠀⡀⠋⠁⠒⠛⠿⠿⣿⣛⣫⣭⣿⣿⣿⣿⣿⣷⣴⣬⣁⡙⠳⣯⣝⠞⢿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⡿⡝⡞⣿⣿⣿⢺⣿⣿⣿⣿⢐⢊⠬⡑⠬⣁⠚⣿⣿⣿⡿⣫⣾⣿⣿⣿⣿⣿⠋⠀⠠⠀⠀⢿⣿⢹⣿⡿⣿⠇⢂
-⠀⠀⠀⠀⠀⠀⣀⣠⣤⣴⣶⣶⣿⣿⣿⣿⣿⣶⣤⣅⡊⡜⢠⠃⡔⠠⢄⢋⠛⠿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣷⣬⣙⢻⣮⣾⣝⢿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣽⢧⣿⣿⣿⣿⣿⣿⣿⣿⣿⠀⢊⠔⡡⢃⢌⠢⢹⡿⣫⣾⣿⣿⣿⣿⣿⠟⡡⠀⠅⢂⠀⠈⡘⢿⣸⣽⢳⡏⡘⢀
-⢀⣠⡤⣶⣾⣿⣿⣿⣿⣿⣿⣿⣿⣿⣟⣿⣿⣿⣿⣯⣽⣦⣅⠒⣌⠱⡌⢦⡙⠴⡨⠝⢿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣷⣆⡻⢿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⡟⣸⣿⣿⣿⣿⣿⣿⣿⣿⣿⠀⢅⠊⡔⢡⠊⠔⡁⢾⣿⣿⣿⣿⣿⡿⣉⠒⠠⢁⠊⠄⠀⠀⠄⢋⠞⣜⠣⠘⡀⠂
-⣯⣿⣿⣿⢿⣛⣻⣭⣿⣶⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣷⣌⠱⣜⢢⡙⢶⣡⢋⡔⣙⢿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣦⡛⢿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⡇⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⡇⠀⠎⡐⠡⡘⠀⠆⡈⢻⣿⣿⣿⢃⠒⠠⡐⢁⠂⠌⡀⠂⠀⠌⠠⢉⠆⠡⠁⠄⠡
-⣻⣿⣿⣿⣿⣿⣿⣿⣿⡿⢿⣿⣟⣿⣿⣯⣿⣿⣿⣿⣿⣿⣿⣿⣿⣷⡌⢷⡹⣖⣣⢏⡶⡡⢆⠝⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣞⣦⡙⢿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⢠⣿⣿⣿⣫⣿⣿⣿⣿⣿⣿⣯⠀⡘⠠⠁⠄⢃⠐⠀⠀⠻⡛⠄⢃⡈⠔⡀⠊⠄⢂⠐⠀⠀⢈⠐⠠⠈⠄⠡⡈⠐
-⣿⣿⣿⣿⣿⣽⣿⣶⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣦⠛⡼⣥⠛⢶⠹⠎⡜⠨⢻⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣦⠙⠻⣿⣿⣿⣿⣿⣿⣿⣿⣿⣾⡝⢿⣿⣿⣿⣿⣿⣯⠛⠸⣿⡿⣵⣿⣿⣿⣿⣿⣿⣿⣿⡇⠀⠁⠌⠐⠀⠠⠈⠀⠀⠀⠘⠤⠐⠂⠌⠀⠂⠄⠈⠀⠀⠀⠂⠡⠈⠄⠡⠀⠅
-⣹⣼⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⠿⠿⠿⠿⡦⠁⢇⠹⡌⠇⠊⠄⠡⠀⠙⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣦⡈⠻⣿⣿⣿⣿⣿⣿⡿⣿⣿⡎⢿⡘⣿⣿⡟⡜⣷⡀⢻⣷⣿⣿⣿⣿⣿⣿⣿⣿⣿⣷⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
-⣿⣿⣿⣿⡿⣿⣿⢻⣿⣏⣿⣿⣼⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣶⣶⣶⣶⣷⣦⡈⠣⡘⢌⠑⢌⠡⠈⠀⡈⢿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣷⡘⠙⢿⣿⣿⣿⣇⣿⣿⡇⠘⡇⠹⣿⣿⣷⣿⡇⢸⣿⣿⣿⣿⣿⣿⣿⣿⣿⠿⡙⢣⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⢀⠀⠀⠀⠀
-⢿⣏⣿⣼⣷⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣷⡰⠰⣄⠱⣄⠰⣀⠆⡠⠈⢿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣉⠄⢦⣉⢿⣿⣿⣿⣿⡇⠰⣱⠀⠿⣿⣿⣿⢧⠀⣿⣿⣿⣿⣿⢿⢿⡹⣌⡶⣡⢇⡏⡄⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠄⠠⠀⡀⠄⠠⠀⠄
-⢿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣧⠑⡄⠣⢌⡑⠢⠜⡠⠃⠄⢻⣿⣿⣿⣿⣧⡹⣿⣿⣿⣿⣿⣿⣿⣿⣦⡛⡮⠻⣿⣿⠿⡛⠁⠁⡈⡀⠋⡍⡱⣈⠆⡹⢶⡹⢶⡹⢮⣳⡝⣧⢿⡱⣏⢾⣙⣆⡀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⡈⠐⠠⠐⡈⠄⢁⠂
-⠶⣽⠛⠻⢿⣛⡋⡹⢿⣿⣟⣟⣿⣻⣻⣿⣿⣿⣿⣿⣿⣿⣿⣿⣛⣟⣿⣛⣛⣻⣟⣛⣣⢈⠑⠢⠌⡑⠌⡠⠑⢂⠈⣿⣿⣿⣿⣿⣷⡘⣿⣿⣿⣿⣿⣿⣿⣿⣿⡌⢳⠰⢄⡲⢩⠀⠆⠀⠐⠆⢘⠰⡡⠀⡙⢦⣛⢧⣟⣯⣷⣻⣽⢫⢷⡹⣎⡳⣜⠞⡤⡀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠄⡁⢁⠂⡐⠈⠄⠂
-⣿⣠⣤⣤⣤⣌⣭⣡⣔⣉⠛⠻⠿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⡄⠌⡁⠒⡈⠐⠠⢁⠂⠄⠸⣿⣻⣿⣿⣿⣧⣺⣿⣿⣿⣿⣿⡟⡟⢯⡹⠀⢫⠜⡰⠃⠈⡐⠀⠡⠀⢨⠰⠁⣀⡝⣮⡽⣯⢿⡽⣾⢷⣏⡟⡮⢵⢣⠟⣬⡛⡵⣩⢖⣀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⢈⠐⢀⠂⡐⠠⠁⠌⡀
-⣯⣿⣿⣻⣿⣛⣿⡿⠿⣿⣿⣷⣶⣦⣍⡙⠛⠻⠿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣧⠐⠠⠁⠄⡁⠂⠄⡈⠀⠀⢳⣭⣛⠿⡿⢿⠿⡿⢿⣻⢛⢦⡹⢜⠣⡜⡁⠠⢋⠴⡀⠐⠀⠀⠀⢀⠣⠃⢀⢰⣹⢶⣻⡽⣾⡹⢯⢟⡮⠽⣜⡣⢏⡞⣥⢛⡴⣓⠮⡜⢣⠣⢄⡀⠀⠀⠀⠀⠀⠀⠀⠄⡈⠠⠐⠠⠁⠌⠠⠀
-⣽⣟⣿⣿⠿⣿⣿⣿⣿⣷⣾⣭⣽⣛⠿⣿⣷⡠⠐⠀⠄⢩⢉⠛⡛⠻⠟⡿⠿⢿⠿⣿⢿⣿⠀⠀⠁⠠⠐⠈⠀⠀⠀⠀⠸⣲⢭⡛⡵⢫⡝⣜⢣⢎⡝⢦⠓⣎⡱⢬⡑⠄⠡⢂⡅⠀⠀⠀⠀⡌⠁⠀⢂⠮⣽⣿⣿⣟⣷⢻⡝⠮⣜⢫⠖⣭⠳⡜⢦⣋⠶⣉⢮⡑⣣⠙⠢⢌⡑⠄⠂⠄⠠⠀⠐⠠⢀⠡⢈⠐⢈⠠⠁⠄
-⣿⣿⣿⣿⣿⣷⣶⣯⣽⣛⡿⢿⣿⣿⣿⣷⣮⣝⡷⣴⡄⠂⠠⠁⡌⠑⠩⠐⠍⢢⡑⢂⠎⡰⠂⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⢧⣋⡞⣭⠳⡜⣎⠳⣎⡜⡣⢏⡴⢱⢢⠩⡘⡀⠀⡘⡀⠀⠀⠐⠀⢀⡾⣷⣮⡽⣏⢿⡙⣎⢳⡚⡕⡨⢇⢻⡐⡏⣜⠣⣌⠳⡘⢦⠑⣢⠩⡑⢂⠰⢈⠡⠈⠄⠀⠌⡐⢀⠂⠄⠂⠄⠂⠌⠀
-⠭⣿⣿⢿⣿⣿⣿⣿⣿⣿⣿⣷⣾⣭⣻⢿⣿⣿⣿⣷⣭⡳⣄⠁⢀⠃⠱⡈⠜⡠⠐⡌⢢⠁⠄⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⢧⠳⣜⠲⣍⡳⣜⠳⣜⠂⠛⡴⢊⡕⢪⠑⡰⠀⢂⡀⠐⠀⠀⠁⠀⡸⢽⣻⢟⡿⣬⠢⢍⠢⢣⠜⡰⢂⠎⢦⠑⡎⠴⣉⠆⢣⠙⠤⡉⢄⢃⡘⠠⠒⡀⢂⠁⠀⢀⠂⠄⠠⢈⠐⠈⠠⢈⠀⠄
-⣆⠩⠻⣿⣶⣯⣛⠿⣿⣿⣿⣿⣿⣿⣿⣿⣮⣝⠿⣿⣿⣿⣾⣕⢄⠈⠐⠠⢁⠢⢑⠨⡐⠌⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⣏⠳⣎⡝⡲⡕⣎⠳⣌⠧⣘⠲⡍⡜⢢⡑⠄⡰⠁⡲⣀⠀⠀⠀⠠⣑⢫⡜⣭⢛⡵⣫⠦⣑⠂⠌⡑⠌⡘⠤⡉⠔⡡⢂⠎⢡⠊⡑⢈⠂⠤⢀⡁⢂⠐⠀⠀⠀⠂⠌⠀⠂⠄⠂⢈⠐⠀⠠⠀
-⠿⣷⣅⢊⠛⢿⣿⣿⣶⣭⣛⢿⣿⣿⣿⣿⣿⣿⣿⣮⣝⢿⣿⣿⣷⣄⠂⡀⠀⠂⠌⡐⠠⢉⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⢘⡬⢳⡜⡼⣱⠹⣌⠳⣌⢇⢣⠓⡜⢌⠢⠌⡰⣱⢊⠐⡡⢂⠀⠀⠐⢌⠲⡘⢆⣫⠲⢥⠳⢬⡙⡔⡠⢈⠐⠠⢀⠡⠐⠠⠈⠄⠂⠌⠠⢈⠐⠀⠄⠀⠀⠀⠀⢈⠐⠀⠌⡐⠈⢀⠂⠠⠁⠠⠀
-⠑⠪⢟⠷⣌⠀⠛⢿⣿⣿⣿⣿⣮⣝⡿⣿⣿⣿⣿⣿⣿⣷⣭⡻⣿⣿⣷⡄⠂⠀⠐⠠⢁⠂⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⡎⣜⢣⢞⡡⢇⡛⣌⠳⡌⢎⠲⣩⠘⡄⠃⡔⣣⠕⣊⠆⠱⢈⠀⠀⠈⡀⠣⢙⠢⢒⡍⢲⡉⢦⠱⢌⠱⡁⠎⡐⠀⠀⠈⠀⠁⠀⠁⠀⠁⠀⠀⠀⠀⠀⠀⠀⠀⠂⠀⠌⠠⠐⠀⢂⠠⠁⠀⠄⠀
-⠀⠁⠂⢉⠒⠥⡈⠄⠌⢛⠿⣿⣿⣿⣿⣶⣝⡻⣿⣿⣿⣿⣿⣿⣮⣝⢿⣷⡡⢈⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⢰⢩⠜⡒⢎⡱⢣⠜⢢⢓⠸⣈⠒⠄⡡⢀⠜⡲⢡⠚⡔⡈⠆⠁⠀⠀⠀⠀⠁⠈⠰⢁⠘⠄⡘⠠⢁⠊⠐⠀⠂⠀⠁⠈⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠐⠠⠁⡈⠐⠀⡈⠀⠄⠀⠁⠀⠀
-⠀⠐⠀⡀⠐⠠⠉⢂⠈⡀⠊⠜⠹⢻⣟⣿⣿⣿⣶⣝⡻⣿⣿⣿⣿⣿⣷⣝⠳⠂⢌⠠⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⡐⢊⠦⡙⠜⢢⢑⠊⣌⠡⢊⠔⠠⡁⠊⢠⠜⡌⡑⠣⣉⠐⠡⠈⠀⠀⠀⠀⠀⠀⠀⠀⡀⢀⠀⡀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⡀⠂⠀⢈⠀⠂⠄⠁⡐⠀⠁⠀⠈⠀⠀⠀
-⠀⠀⠀⠀⠐⠀⡀⠂⠐⢀⠂⡈⠄⠁⠄⠌⡙⠳⢛⠯⣛⢎⡙⢎⠻⡜⡳⢏⡿⡌⡀⢂⠡⢀⠀⠀⠀⠀⠀⠀⠀⡐⢌⠡⢊⠌⡡⢃⠌⢒⠠⢁⠢⠈⠀⢠⠘⠄⣊⠐⠡⠁⠄⠈⠀⠀⠀⠀⠀⠀⢀⠄⣊⠱⡈⢆⠱⡈⢆⠱⡐⢄⠂⡄⢀⠀⠀⠀⠀⠀⠀⠀⠀⡀⠄⠂⠁⡐⠠⠁⠀⠠⢈⠐⠈⢀⠀⠌⠀⠀⠁⠀⠀⠀
-⠀⠀⠈⠀⠀⠀⠀⠐⠀⡀⠠⠐⠠⠈⠄⠠⠀⢁⠂⠄⡁⢊⠐⠄⡀⠂⡑⠨⢐⠡⠂⡄⠐⢈⠐⠠⠀⠀⠀⢀⠆⠱⡈⢂⠡⢊⠐⡂⠌⠂⠄⠁⠀⠀⠐⠀⠈⠀⠀⠀⠀⠀⡀⠠⢄⠒⡌⡐⢡⠊⡔⢊⠄⢣⠘⡄⢣⠘⡄⢣⠘⡄⢣⠘⠤⢉⠢⡁⠆⡀⠀⠠⠁⠄⠂⢀⠂⠐⠀⠄⠀⠐⠠⠈⠀⠠⠀⠀⢀⠀⠀⠀⠀⠀
-⠀⠀⠀⠀⠁⠀⠄⠀⠀⠀⠠⠀⠀⠌⠀⠁⠌⢀⠈⠐⢀⠂⠌⡐⠠⠁⡄⢁⠂⠤⠁⡄⠃⢄⠈⠡⠈⠄⡀⠀⠨⢁⠔⠡⠈⠤⠁⠀⠈⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⢠⠐⢢⢁⠃⢎⠰⢠⠑⢢⠑⡌⢢⠉⢆⠱⡈⢆⠱⠈⠆⠱⠈⠂⠁⠈⠀⠁⠀⠀⠀⠀⠀⡁⠂⠀⢂⠈⠄⠐⠈⡀⠄⠂⠀⠄⠁⠀⠂⠀⠀⠀⠀⠀⠀
-⠀⠀⠀⠀⠀⠀⠀⠀⠁⠀⡀⠀⠁⠀⠂⠈⠀⡀⠌⠐⡀⠠⠐⠀⡁⢂⠐⡀⠢⢀⠁⠄⡉⠄⠌⡐⠈⡐⢀⠂⠄⠀⠀⠀⠀⠀⠀⠀⠀⢀⢀⡀⡀⢀⠀⠀⠀⠀⠈⠀⠉⠄⠨⠘⣀⠃⠆⡉⠆⠘⠀⠃⠌⠀⠁⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⡁⠠⠀⠌⠀⡈⠄⠀⠄⠀⠄⠂⠀⠐⠀⠀⠀⠀⠀⠀⠀
-⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠂⠠⠀⠁⠀⠀⠠⠐⠀⢁⠐⠠⠀⠄⠂⠠⢁⠂⠌⡐⢀⠈⡐⠠⢁⠐⡀⠐⠈⠄⡀⠀⠀⠀⠀⡀⠣⠌⢂⠔⡁⢊⠄⠄⡀⠀⠀⠀⠀⠀⠀⠁⠀⠈⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠂⠀⠠⠀⠄⡁⠀⠄⠂⠀⠁⠀⠄⠀⠀⠀⠀⠀⠀
-⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠈⠀⠐⠀⠀⠈⠀⠀⠂⠁⡀⠂⡀⠀⡐⠠⠐⡀⠂⠄⠁⠂⡐⠠⢁⠂⠠⠀⢁⠂⢀⠀⠀⠀⠁⠊⠀⠈⠀⠈⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠁⠀⠡⠐⢀⠠⠀⠠⠀⠁⠀⠂⠀⠀⠀⠀⠀⠀⠀
-⠀⠀⠐⠀⡀⠀⡀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠐⠀⠁⡀⠀⠄⠀⠁⡈⠄⠁⡀⠐⠀⠌⠐⡀⠂⠀⠂⠀⠄⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠠⠁⡀⠂⠀⠐⠀⠠⠈⠀⠠⠀⠀⠀⠀⠀⠀⠀
-⠀⠈⠀⡀⠀⠄⠀⠄⠁⠀⠂⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠁⠀⠐⠀⠂⢀⠀⠀⠂⢀⠂⠠⠀⠂⢀⠁⠂⠄⠈⠀⠐⠀⡀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠄⠀⠄⠁⡀⠈⠀⠀⠐⠀⠀⠀⠀⠀⠀⠀⠀
-⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠈⠀⠄⠐⠀⡀⠀⠠⠐⠀⠂⢀⠠⠈⠀⠌⠀⠄⠀⠀⢀⠀⠀⠀⠀⠀⡀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠂⢀⠀⠀⠄⠁⠀⠂⠀⠀⠀⠀⠀⠀⠀⠀
+my twt: @kkruubby
+⠀⠀⠀⠀⠀⠀⢀⡀⠀⠀⠀⠀⠀⠀⣾⡳⣼⣆⠀⠀⢹⡄⠹⣷⣄⢠⠇⠻⣷⣶⢀⣸⣿⡾⡏⠀⠰⣿⣰⠏⠀⣀⡀⠀⠀⠀⠀⠀⠀⠀
+⠀⠀⠀⠀⠀⠀⠀⠀⠀⣀⡀⣀⣀⣀⡹⣟⡪⢟⣷⠦⠬⣿⣦⣌⡙⠿⡆⠻⡌⠿⣦⣿⣿⣿⣿⣦⣿⡿⠟⠚⠉⠀⠉⠳⣄⡀⠀⠀⠁⠀
+⠀⠀⠀⠀⠀⠀⠀⡀⢀⣼⣟⠛⠛⠙⠛⠉⠻⢶⣮⢿⣯⡙⢶⡌⠲⢤⡑⠀⠈⠛⠟⢿⣿⠛⣿⠋⠀⠀⠀⠀⠀⠀⠀⠀⠀⠙⣆⠀⠀⠀
+⠀⠀⠀⠀⠀⡸⠯⣙⠛⢉⣉⣙⣿⣿⡳⢶⣦⣝⢿⣆⠉⠻⣄⠈⢆⢵⡈⠀⠀⢰⡆⠀⣼⠓⠀⠀⠀          Nah    ⠀⠀⠈⣷⠀⠀
+⠀⠀⠀⠖⠉⠻⣟⡿⣿⣭⢽⣽⣶⣈⢛⣾⣿⣧⠀⠙⠓⠀⠑⢦⡀⠹⣧⢂⠀⣿⡇⢀⣿⠺⠇⠀          ⠀I'd⠀          ⠀⣿⠀⠀
+⠀⠀⠀⠀⠐⠈⠉⢛⣿⣿⣶⣤⣈⠉⣰⣗⡈⢛⣇⠀⣵⡀⠀⠘⣿⡄⢻⣤⠀⢻⡇⣼⣧⣿⠀   win⠀⡿⠀⠀
+⠀⠀⠀⠀⠀⣠⣾⣿⢍⡉⠛⠻⣷⡆⠨⣿⣭⣤⣍⠀⢹⣷⡀⠀⠹⣿⡄⠈⠀⢿⠁⣿⣿⠏⠀⠀⠀                        ⠀⠀⠀⣇⠀⠀
+⠀⣿⣇⣠⣾⣿⣛⣲⣿⠛⠀⠀⢀⣸⣿⣿⣟⣮⡻⣷⣤⡙⢟⡀⠀⠙⢧⠀⠀⠎⠀⠉⠁⠰⣿⠀⠀                         ⠀⢀⡿⠀⠀
+⠀⠈⢻⣿⣿⣽⣿⣿⣿⣴⡏⠚⢛⣈⣍⠛⠛⠿⢦⣌⢙⠻⡆⠁⠀⠀⠀⣴⣦⠀⠀⠀⠐⢳⢻⣦⣀⠀⠀⠀⠀⠀⠀⠀⠀⢀⠮⠀⠀⠀
+⠀⠀⠈⠙⣿⣧⣶⣿⠿⣧⣴⣿⢻⡉⠀⢀⣠⣴⣾⡟⠿⠃⠁⣠⣤⡶⣾⡟⠅⠀⣀⡄⠀⣾⢸⣿⣏⢻⢶⣦⣤⣤⣄⢶⣾⣿⣡⣤⡄⠀
+⠀⠀⣠⣞⣋⣿⣿⣾⣿⡿⡛⣹⡟⣤⢰⡿⠟⠉⣀⣀⣤⣤⡠⠙⢁⣾⡿⠂⠀⣿⠟⣁⠀⣹⠀⣹⣿⡟⣼⣿⣿⣌⣿⣞⣿⣿⠁⠀⠀⠀
+⠀⢠⡿⢛⢟⣿⣿⣿⣿⣿⣿⡟⣼⣿⣟⢓⠛⣿⣏⣿⣵⣗⣵⣴⣿⢟⡵⣣⣼⣿⢟⣵⣶⢻⣶⣿⠀⠀⣈⢻⣿⣿⣿⢿⣾⢿⣧⠀⠀⠀
+⠀⠘⠃⢸⣿⡾⣿⣿⣿⣿⣯⣿⣿⣿⣶⣿⣿⣟⣾⡿⣫⣿⣿⣿⣽⣿⣿⣿⣿⢫⣾⣿⣿⣿⣿⣿⣴⡆⣻⣿⡏⣿⢻⣧⣿⡿⣿⡆⠀⠀
+⠀⠀⠀⠜⣿⣾⢿⣿⣿⣿⣾⣿⣿⣿⣿⣿⣿⣭⣿⣖⣿⢿⣿⡿⣿⣿⣿⡿⢡⢯⣿⣿⣿⣿⣿⣿⣿⣧⡿⣾⣷⣿⣿⢿⣿⡇⠉⠁⠀⠀
+⠀⠀⠀⠀⣿⣥⣾⣿⣿⣿⣿⣿⣿⣿⡇⣭⣿⣿⣿⣿⠃⠞⠟⣸⣿⠏⣸⣧⣀⠿⢿⣿⣿⣟⣿⣿⣿⣿⣽⣿⢿⣿⣿⣿⣿⠁⠀⠀⠀⠀
+⠀⠀⠀⠈⠛⣹⣿⣿⣿⣿⢿⣿⣿⣿⣿⣿⣟⣿⣿⡿⢶⣦⣄⣿⠏⠀⣿⣟⣿⣶⠾⣿⣟⣋⣛⣿⣿⣿⣿⡇⣻⣿⣿⣿⡏⠀⠀⠀⠀⠀
+⠀⠀⠀⠀⠟⠛⠫⣿⣿⣿⣿⣿⡿⣧⠛⣿⠛⣿⣿⣿⣷⡌⠹⡟⠀⠀⠉⡟⠋⢠⣾⣿⣿⣿⡟⣿⣿⣿⣿⢀⣿⣿⣿⣿⣧⠀⠀⠀⠀⠀
+⠀⠀⠀⠀⠀⠀⠘⠋⣾⣷⣿⣿⣧⠙⠀⠙⢣⠝⠛⠋⣽⣷⢦⠇⠀⠀⠘⠁⣤⣾⣿⠝⠛⠉⠘⢻⣿⣿⢿⣼⣷⡟⢻⣷⠉⠀⡀⠀⠀⠀
+⠀⠀⠀⠀⠀⠀⠀⠐⠟⢻⣿⣿⣿⡀⠀⠀⠀⠀⠀⠀⠀⠉⠀⠀⠀⠀⠀⠀⠈⠛⠀⠀⠀⠀⠀⣾⠟⠀⢸⣷⣿⡇⠀⠛⠀⠀⠁⠀⠀⠀
+⠀⠀⠀⠀⠀⠀⠀⠀⠀⠛⠁⠀⢹⣇⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⢠⣿⣿⣿⡧⠀⠀⠀⠀⠀⠀⠀⠀
+⠀⠀⠀⠀⠀⠆⠀⠀⠀⠀⠀⠀⠈⣿⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⢀⣾⢻⡿⠈⠁⠀⠀⠀⠀⠀⠀⠀⠀
+⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⢹⣇⠀⠀⠀⠀⠀⠀⠀⠀⠲⣄⠀⡄⠆⠀⠀⠀⠀⠀⠀⠀⠀⣼⡏⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
+⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠈⣿⣷⡀⠀⠀⠀⠀⠀⠀⠀⠈⠀⠀⠀⠀⠀⠀⣀⠀⠀⣠⣾⣿⠁⠀⠀⠀⠀⠀⣀⡄⠀⠀⠀⠀⠀
+⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⣿⣿⢻⣆⠀⠛⠁⠶⣶⣶⣶⣶⣶⣶⡶⠆⠘⠋⣠⡾⢫⣾⡟⠀⠀⠀⠀⠀⠐⠉⠀⠀⠀⠀⠀⠀
+⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⣿⠛⠀⠙⣷⡀⠀⠀⠙⠛⠛⠛⠛⠋⠁⠀⢀⣴⠋⠀⣾⣿⡇⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
+⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⢀⣤⣿⣰⣦⡀⠸⣿⣦⡀⠀⠀⠀⠀⠀⠀⢀⣴⡟⠁⠀⠐⢻⣿⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
+⠀⠀⠀⠀⠀⠀⠀⠀⢀⣠⣴⣾⣿⣿⣿⡄⢺⣿⡄⠹⣿⠻⢦⣤⣤⣤⣤⣶⣿⡟⢀⣀⠀⠀⢸⣿⣦⣄⡀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
+⠀⠀⠀⠀⢀⣠⣴⣾⣿⣿⣿⣿⣿⣿⣿⣿⣮⣿⣿⡀⠹⡷⣦⣀⡀⡀⢸⣿⠏⢠⣾⣿⠀⠀⣾⣿⣿⣿⣿⣶⣄⣀⠀⠀⠀⠀⠀⠀⠀⠀
+⣀⣤⣴⣶⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣧⠀⠘⣷⣻⡟⠀⡼⠁⣴⣿⣿⣯⣥⣾⣿⣿⣿⣿⣿⣿⣿⣿⣿⣶⣤⣀⠀⠀⠀⠀
+⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣶⣯⣿⣤⣤⣤⣬⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣶⣤⣄
+⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿
             </pre>
             <p>Welcome to my journey into the world of ethical hacking. This site serves as a comprehensive guide and resource center for aspiring ethical hackers.</p>
         </section>
